objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>General Inquiry</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Category_Subtype__c</fullName>
        <label>Category Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SubtypeA</fullName>
                </value>
                <value>
                    <fullName>SubtypeB</fullName>
                </value>
                <value>
                    <fullName>SubtypeC</fullName>
                </value>
                <value>
                    <fullName>SubtypeD</fullName>
                </value>
                <value>
                    <fullName>SubtypeE</fullName>
                </value>
                <value>
                    <fullName>SubtypeF</fullName>
                </value>
                <value>
                    <fullName>SubtypeG</fullName>
                </value>
                <value>
                    <fullName>SubtypeH</fullName>
                </value>
                <value>
                    <fullName>SubtypeI</fullName>
                </value>
                <value>
                    <fullName>SubtypJA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <label>Category Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Derivatives</fullName>
                </value>
                <value>
                    <fullName>Equities</fullName>
                </value>
                <value>
                    <fullName>Forex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creator_Functional_Group__c</fullName>
        <label>Creator Functional Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Open_Opportunities__c</fullName>
        <formula>Account.Total_Amount_Open_Opportunities__c</formula>
        <label>Open Deal Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Amount__c</fullName>
        <label>Reimbursement Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>ApexBadge_Printers_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ApexBadge_Printers</label>
        <queue>ApexBadge_Printers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fleece_Derivatives_Team_A_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Fleece Derivatives Team A</label>
        <queue>Fleece_Derivatives_Team_A</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fleece_Equities_Team_A_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Fleece Equities Team A</label>
        <queue>Fleece_Equities_Team_A</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fleece_Equities_Team_B_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Fleece Equities Team B</label>
        <queue>Fleece_Equities_Team_B</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fleece_Forex_Team_A_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Fleece Forex Team A</label>
        <queue>Fleece_Forex_Team_A</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HW_Laptop_Q_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>HW - Desktop Q</label>
        <queue>HW_Desktop_Q</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>SW_Drivers_Q_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>SW - Drivers Q</label>
        <queue>SW_Drivers_Q</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>General_Inquiry</fullName>
        <active>true</active>
        <businessProcess>General Inquiry</businessProcess>
        <label>General Inquiry</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Reimbursement_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Reimbursement_Amount__c &gt; 1000</errorConditionFormula>
        <errorDisplayField>Reimbursement_Amount__c</errorDisplayField>
        <errorMessage>Reimbursement Amount cannot be greater than $1000</errorMessage>
    </validationRules>
</CustomObject>